RESOLVED FIXED304456
Fix priority inversion in RunLoop::dispatch() by using UnfairLock
https://bugs.webkit.org/show_bug.cgi?id=304456
Summary Fix priority inversion in RunLoop::dispatch() by using UnfairLock
Ruthvik Konda
Reported 2025-12-18 18:35:34 PST
Fix priority inversion in RunLoop::dispatch() by using UnfairLock
Attachments
Ruthvik Konda
Comment 1 2025-12-18 18:35:47 PST
Ruthvik Konda
Comment 2 2025-12-18 18:55:00 PST
EWS
Comment 3 2025-12-19 13:19:45 PST
Committed 304775@main (b432d36acad4): <https://commits.webkit.org/304775@main> Reviewed commits have been landed. Closing PR #55668 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.